--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,11 +9,11 @@ Description: The main purpose of this R extension is to select features in (poss
     It can also provide a ranking of gene (or in fact whatever features present in the data) specificity to each cell cluster as well as select smaller sets of marker genes by a permutation test and using entropy-based feature selection. 
     To assess cell clustering quality, some functions can also compute cell cluster quality metrics.
 License: GPL-3
-Depends: R (>= 2.10)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Imports: 
+Depends: 
+	R (>= 2.10),
     Matrix,
     mclust,
     parallel,
