--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,7 @@ importFrom("graphics", "legend", "lines", "par", "plot")
 importFrom("methods", "as")
 importFrom("stats", "cor", "ecdf", "kmeans", "median", "p.adjust", "quantile")
 importFrom("utils", "write.table")
-importFrom("mclust", "Mclust")
-importFrom("mclust", "mclustBIC")
+importFrom("mclust", "Mclust", "mclustBIC")
 importFrom("parallel", "mclapply")
 importFrom("pheatmap", "pheatmap")
 importFrom("Matrix", "sparseMatrix")
