add binary heatmap functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(getPValues)
 export(plotCorrelationHeat)
 export(plotMarkerHeat)
 export(plotTopMarkerHeat)
+export(plotBinaryHeat)
+export(plotTopBinaryHeat)
 export(plotMarkerScores)
 export(sortGenes)
 export(write.files)
