fixed bugs and optimized getTable. spelling mistake in write.files. version bump.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: genesorteR
 Type: Package
 Title: Feature Ranking in Clustered Single Cell Data
-Version: 0.3.3
+Version: 0.4.0
 Author: Mahmoud M Ibrahim
 Maintainer: Mahmoud M Ibrahim <mmibrahim@pm.me>
-Description: The main purpose of this R extension is to select features in (possibly very large) single cell data including scRNA-Seq and potentially scATAC-Seq.
+Description: The main purpose of this R extension is to select features in (possibly very large) single cell data including scRNA-Seq and scATAC-Seq.
     The main idea is that the dropout rate of a gene is a good measure of its expression, and that empirical statistics calculated based on binarized expression matrices are sufficient to select marker genes in a way that is consistent with the expected definition of "marker gene" in experimental biology research.
     It can provide a ranking of genes specificity in each cell cluster, as well as select large or small sets of marker genes by a permutation test or using entropy-based feature selection.
     To assess cell clustering quality, some functions can also compute cell cluster quality metrics.
